# S-G-INVENTORY-MANAGER

./: README.md  admin_user.py  conexion_sp.py  inventario.json  inventario.py  login.py  main.py  mod_reportes.py  permisos.py  pyproject.toml  pyvenv.cfg  requirements.txt  usuarios.csv  utils.py
