[project]
name = "proyectos-propios-sa"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fpdf2 (>=2.8.5,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "proyectos_propios_sa", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
